[package]
name = "mgroup3-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = "0.14"
bytes = "1"
prost-types = "0.14"
unicode-general-category = "1"
flate2 = "1"
rustc-hash = "2.1.2"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
libloading = "0.8"
